--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Kolker+Brush&display=swap" rel="stylesheet" />
 
 <body>
-
-    <!-- for bg  -->
-
-
     <!-- header part -->
 
     <div class="header">
@@ -18,27 +14,45 @@
                 <span>Home</span><i></i>
             </button>
             <button>
-                <span>My Skills</span><i></i>
+                <span onclick="window.open('https://chat.openai.com/', '_blank');">My Resume</span><i></i>
             </button>
             <button>
                 <span>Contact</span><i></i>
             </button>
-
-            <!-- my nav
-            <button id="home">Home</button>
-            <button id="abt">About</button>
-            <button id="contact">Contact</button> -->
         </div>
     </div>
 
     <!-- body part -->
 
-    <div class="content">
+    <!-- <div class="content">
         <span class="fcontent">I'am
         </span>
         <br>
         <span class="f2content">Harish</span>
 
         <img id="avatar" src="../../assets/img/avatar.png" />
+    </div> -->
+
+    <div class="jumbotron d-flex align-items-center">
+        <!-- 
+        <div class="rectangle-1"></div>
+        <div class="rectangle-2"></div> -->
+        <div class="rectangle-transparent-1"></div>
+        <div class="rectangle-transparent-2"></div>
+        <div class="circle-1"></div>
+        <div class="circle-2"></div>
+        <div class="circle-3"></div>
+        <div class="triangle triangle-1">
+            <img src="../../assets/img/img/obj_triangle.png" alt="">
+        </div>
+        <div class="triangle triangle-2">
+            <img src="../../assets/img/img/obj_triangle.png" alt="">
+        </div>
+        <div class="triangle triangle-3">
+            <img src="../../assets/img/img/obj_triangle.png" alt="">
+        </div>
+        <div class="triangle triangle-4">
+            <img src="../../assets/img/img/obj_triangle.png" alt="">
+        </div>
     </div>
 </body>
