--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,58 +1,102 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Kolker+Brush&display=swap" rel="stylesheet" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Tilt+Prism&display=swap" rel="stylesheet">
 
-<body>
-    <!-- header part -->
+<body style="background-color: black;">
 
-    <div class="header">
-        <div class="loader"></div>
+    <div class="masterdiv">
+        <!-- header part -->
+        <header>
+            <div class="header">
+                <div class="loader"></div>
 
 
-        <div class="nav">
-            <button>
-                <span>Home</span><i></i>
-            </button>
-            <button>
-                <span onclick="window.open('https://chat.openai.com/', '_blank');">My Resume</span><i></i>
-            </button>
-            <button>
-                <span>Contact</span><i></i>
-            </button>
-        </div>
-    </div>
+                <div class="nav">
 
-    <!-- body part -->
+                    <button>
+                        <span
+                            onclick="window.open('https://drive.google.com/file/d/1HnrXVMTJPz_sfbPfShBUmrj-l0ZW-7Ez/view?usp=sharing', '_blank');">My
+                            Resume</span><i></i>
+                    </button>
 
-    <!-- <div class="content">
-        <span class="fcontent">I'am
-        </span>
-        <br>
-        <span class="f2content">Harish</span>
+                    <button>
+                        <span onclick="window.open('https://linktr.ee/harish_182002', '_blank');">More
+                            Info</span><i></i>
+                    </button>
 
-        <img id="avatar" src="../../assets/img/avatar.png" />
-    </div> -->
+                </div>
+            </div>
+        </header>
 
-    <div class="jumbotron d-flex align-items-center">
-        <!-- 
-        <div class="rectangle-1"></div>
-        <div class="rectangle-2"></div> -->
-        <div class="rectangle-transparent-1"></div>
-        <div class="rectangle-transparent-2"></div>
-        <div class="circle-1"></div>
-        <div class="circle-2"></div>
-        <div class="circle-3"></div>
-        <div class="triangle triangle-1">
-            <img src="../../assets/img/img/obj_triangle.png" alt="">
-        </div>
-        <div class="triangle triangle-2">
-            <img src="../../assets/img/img/obj_triangle.png" alt="">
-        </div>
-        <div class="triangle triangle-3">
-            <img src="../../assets/img/img/obj_triangle.png" alt="">
-        </div>
-        <div class="triangle triangle-4">
-            <img src="../../assets/img/img/obj_triangle.png" alt="">
+        <!-- here comed the overall background of the webpage -->
+        <div class="jumbotron d-flex align-items-center">
+            <div class="rectangle-transparent-1"></div>
+            <div class="rectangle-transparent-2"></div>
+            <div class="circle-1"></div>
+            <div class="circle-2"></div>
+            <div class="circle-3"></div>
+
+            <!-- main content -->
+            <div class="content">
+                <div class="content2">
+                    <span class="fcontent" style="font-family: 'Tilt Prism', cursive;">I'am Harish
+                    </span>
+                    <br>
+                    <span class="fcontent1" style="font-family: 'Space Mono', Arial, serif;">Full Stack Developer /
+                        UI,UX Designer
+                    </span>
+                    <br>
+
+
+                </div>
+
+                <img id="avatar" src="../../assets/img/avatar.png" />
+            </div>
+
+            <!-- bg icons -->
+            <div class="triangle triangle-1">
+                <img src="../../assets/img/img/obj_triangle.png" alt="">
+            </div>
+            <!-- <div class="triangle triangle-2">
+                <img src="../../assets/img/img/obj_triangle.png" alt="">
+            </div> -->
+            <div class="triangle triangle-3">
+                <img src="../../assets/img/img/obj_triangle.png" alt="">
+            </div>
+            <div class="triangle triangle-4">
+                <img src="../../assets/img/img/obj_triangle.png" alt="">
+            </div>
+
+            <footer>
+                <div class="card-container">
+                    <a class="circle-link" title="Twitter" href="https://twitter.com/HarishA75803797" target="_blank"
+                        rel="noopener">
+                        <img src="../../assets/img/twitter.png" width="26" height="26" viewBox="0 0 245 240">
+                    </a>
+
+                    <a class="circle-link" title="Github" href="https://github.com/harish18092002" target="_blank"
+                        rel="noopener">
+                        <img src="../../assets/img/github.png" width="26" height="26" viewBox="0 0 245 240">
+                    </a>
+                    <a class="circle-link" title="Instagram" href="https://www.instagram.com/h__a__r__i__s___h/"
+                        target="_blank" rel="noopener">
+                        <img src="../../assets/img/2227.jpg" width="26" height="26" viewBox="0 0 245 240">
+                    </a>
+                    <a class="circle-link" title="email" href="mailto:harish18092002@gmail.com" target="_blank"
+                        rel="noopener">
+                        <img src="../../assets/img/gmail.png" width="26" height="26" viewBox="0 0 245 240">
+                    </a>
+                </div>
+
+                <!-- footer elements comes here  -->
+
+            </footer>
+
+
+
         </div>
     </div>
 </body>
